force-app/main/default/objects/Campaign/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Contact)</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>