force-app/main/default/objects/Campaign/fields/Speakers_Needed__c.field-meta.xml
<CustomField>
    <fullName>Speakers_Needed__c</fullName>
    <label>Speakers Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>