force-app/main/default/objects/Campaign/fields/stayclassy__address1__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__address1__c</fullName>
    <label>Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>