force-app/main/default/objects/Campaign/fields/stayclassy__address2__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__address2__c</fullName>
    <label>Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>