force-app/main/default/objects/Campaign/fields/stayclassy__Allocated_Fund__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Allocated_Fund__c</fullName>
    <label>Allocated Funds</label>
    <summarizedField>stayclassy__Classy_Allocations__c.stayclassy__Amount__c</summarizedField>
    <summaryForeignKey>stayclassy__Classy_Allocations__c.stayclassy__Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>