force-app/main/default/objects/Campaign/fields/stayclassy__Average_Gift__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Average_Gift__c</fullName>
    <formula>IF (
HierarchyNumberOfWonOpportunities &gt; 0,
HierarchyAmountWonOpportunities / HierarchyNumberOfWonOpportunities,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Gift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>