force-app/main/default/objects/Campaign/fields/stayclassy__Campaign_Path__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Campaign_Path__c</fullName>
    <label>Campaign Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>