force-app/main/default/objects/Campaign/fields/stayclassy__Canonical_URL__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Canonical_URL__c</fullName>
    <label>Canonical_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>