force-app/main/default/objects/Campaign/fields/stayclassy__Classy_API_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_API_Request_Status__c</fullName>
    <formula>TEXT(stayclassy__Classy_API_Request__r.stayclassy__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API Request Status (GFM Pro)</label>
    <type>Text</type>
</CustomField>