force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Campaign_Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Campaign_Internal_Name__c</fullName>
    <description>Internal Campaign Name</description>
    <inlineHelpText>Internal Campaign Name</inlineHelpText>
    <label>Campaign Internal Name (GFM Pro)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>