force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Designation_Id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Designation_Id__c</fullName>
    <description>The external GoFundMe Pro Designation ID</description>
    <label>Designation ID (GFM Pro)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>