force-app/main/default/objects/Campaign/fields/stayclassy__Classy_External_ID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_External_ID__c</fullName>
    <description>Represents the ID of a Campaign, Fundraising Page, or Team.  The ID is a combination of the type of campaign and the GoFundMe Pro ID.</description>
    <externalId>true</externalId>
    <label>External ID (GFM Pro)</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>