force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Fundraising_Team__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Fundraising_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Campaign record of the GoFundMe Pro fundraising team.</description>
    <label>Fundraising Team (GFM Pro)</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaigns (Classy Fundraising Team)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>