force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Mode_Checked_By_Default__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Mode_Checked_By_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, and if the &quot;GoFundMe Pro_mode_enabled&quot; option is true, this will check the &quot;GoFundMe Pro Mode&quot; selection by default on donation forms on GoFundMe Pro</description>
    <inlineHelpText>If true, and if the &quot;classy_mode_enabled&quot; option is true, this will check the &quot;Classy Mode&quot; selection by default on donation forms on Classy</inlineHelpText>
    <label>Mode Checked By Default (GFM Pro)</label>
    <type>Checkbox</type>
</CustomField>