force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Mode_Enabled__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Mode_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, give the donor the option to cover the transaction fee on GoFundMe Pro Donation form</description>
    <inlineHelpText>If true, give the donor the option to cover the transaction fee on Classy Donation form</inlineHelpText>
    <label>Mode Enabled (GFM Pro)</label>
    <type>Checkbox</type>
</CustomField>