force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Parent_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Campaign record of the parent GoFundMe Pro campaign</description>
    <label>Parent Campaign (GFM Pro)</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>