force-app/main/default/objects/Campaign/fields/stayclassy__Commitment__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Commitment__c</fullName>
    <description>Represents the Commitment level of a fundraiser or supporter</description>
    <label>Fundraising Commitment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>