force-app/main/default/objects/Campaign/fields/stayclassy__country__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>