force-app/main/default/objects/Campaign/fields/stayclassy__Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>