force-app/main/default/objects/Campaign/fields/stayclassy__dcf_enabled__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__dcf_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, Donors have the option to cover transaction fees on the GoFundMe Pro Donation form</description>
    <inlineHelpText>If true, Donors have the option to cover transaction fees on the Classy Donation form</inlineHelpText>
    <label>Donor Covered Fees Active</label>
    <type>Checkbox</type>
</CustomField>