force-app/main/default/objects/Campaign/fields/stayclassy__Deferred_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Deferred_Transaction_Amount__c</fullName>
    <description>The total amount of deferred transactions related to this Campaign</description>
    <label>Deferred Transaction Amount</label>
    <summarizedField>stayclassy__Deferred_Transaction__c.stayclassy__Amount__c</summarizedField>
    <summaryForeignKey>stayclassy__Deferred_Transaction__c.stayclassy__Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>