force-app/main/default/objects/Campaign/fields/stayclassy__Effective_Fixed_FOT_Percent__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Effective_Fixed_FOT_Percent__c</fullName>
    <description>Percentage to be added to fee_on_top transactions for the campaign to cover fees. If fixed_fot_percent is null falls back on the organization&apos;s fixed_fot_percent.</description>
    <inlineHelpText>Percentage to be added to fee_on_top transactions for the campaign to cover fees. If fixed_fot_percent is null falls back on the organization&apos;s fixed_fot_percent.</inlineHelpText>
    <label>Effective Fixed FOT Percent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>