force-app/main/default/objects/Campaign/fields/stayclassy__Event_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Event_Image_URL__c</fullName>
    <description>For top-level events, this is the URL to the main event image</description>
    <label>Event Image URL</label>
    <type>Url</type>
</CustomField>