force-app/main/default/objects/Campaign/fields/stayclassy__Fixed_FOT_Percent__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Fixed_FOT_Percent__c</fullName>
    <description>Percentage campaign elects to be added to fee_on_top transactions to cover fees.</description>
    <inlineHelpText>Percentage campaign elects to be added to fee_on_top transactions to cover fees.</inlineHelpText>
    <label>Fixed FOT Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>