force-app/main/default/objects/Campaign/fields/stayclassy__Fundraiser_Alias__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Fundraiser_Alias__c</fullName>
    <description>Used to distinguish multiple fundraising pages created by a single Contact.  Since a single user can sign up multiple people to create fundraising pages, the alias can be used to represent one of the additional supporters.  For example, a parent might sign up their children for fundraising pages.  The parent remains the Contact attached to the fundraising page, and the alias would be the children&apos;s names.</description>
    <label>Fundraiser Alias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>