force-app/main/default/objects/Campaign/fields/stayclassy__Fundraising_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Fundraising_Page_Title__c</fullName>
    <label>Fundraising Page Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>