force-app/main/default/objects/Campaign/fields/stayclassy__Fundraising_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Fundraising_Team_Name__c</fullName>
    <label>Fundraising Team Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>