force-app/main/default/objects/Campaign/fields/stayclassy__percent_goal_reached__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__percent_goal_reached__c</fullName>
    <formula>IF(ExpectedRevenue &gt; 0, HierarchyAmountWonOpportunities / ExpectedRevenue, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Goal Reached</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>