force-app/main/default/objects/Campaign/fields/stayclassy__Raw_Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Raw_Goal_Amount__c</fullName>
    <label>Raw Goal Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>