force-app/main/default/objects/Campaign/fields/stayclassy__sc_event_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sc_event_id__c</fullName>
    <externalId>true</externalId>
    <label>Campaign ID (GFM Pro)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>