force-app/main/default/objects/Campaign/fields/stayclassy__sf_contact_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sf_contact_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact for this individual fundraiser or team captain for a team fundraiser</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>