force-app/main/default/objects/Campaign/fields/stayclassy__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Start_Date__c</fullName>
    <label>Start Date (GFM Pro)</label>
    <type>DateTime</type>
</CustomField>