force-app/main/default/objects/Campaign/fields/stayclassy__state__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__state__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>