force-app/main/default/objects/Campaign/fields/stayclassy__Team__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team (GFM Pro)</label>
    <referenceTo>stayclassy__Classy_Team__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>