force-app/main/default/objects/Campaign/fields/stayclassy__Team_Role__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Team_Role__c</fullName>
    <description>For fundraising pages that belong to a team, this field denotes whether the individual fundraiser is either a captain or a co-captain of the team.</description>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>primary-captain</fullName>
            </value>
            <value>
                <fullName>co-captain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>