force-app/main/default/objects/Campaign/fields/stayclassy__Timezone_Identifier__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Timezone_Identifier__c</fullName>
    <label>Timezone Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>