force-app/main/default/objects/Campaign/fields/stayclassy__venue_name__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__venue_name__c</fullName>
    <label>Name of the Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>