force-app/main/default/objects/Campaign/fields/stayclassy__zip__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__zip__c</fullName>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>