force-app/main/default/objects/Campaign/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HPCA</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Large Audience</fullName>
            </value>
            <value>
                <fullName>Corporate Talks</fullName>
            </value>
            <value>
                <fullName>Organic Posts</fullName>
            </value>
            <value>
                <fullName>POW Campaigns</fullName>
            </value>
            <value>
                <fullName>Competency</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Testify</fullName>
            </value>
            <value>
                <fullName>Professionalism</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Photo</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>POW Knowledge</fullName>
            </value>
            <value>
                <fullName>Storytelling</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Passion</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>