force-app/main/default/objects/Campaign/fields/Table_Fee_Registration__c.field-meta.xml
<CustomField>
    <fullName>Table_Fee_Registration__c</fullName>
    <label>Table Fee/Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>