force-app/main/default/objects/Campaign/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alliance Members</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>