force-app/main/default/objects/Campaign/fields/Target_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Target_Conversion__c</fullName>
    <label>Target Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>