force-app/main/default/objects/Campaign/fields/Target_Reach__c.field-meta.xml
<CustomField>
    <fullName>Target_Reach__c</fullName>
    <label>Target Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>