force-app/main/default/objects/Campaign/fields/Type_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Event__c</fullName>
    <label>Type of Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Drop</fullName>
                <isActive>false</isActive>
                <label>Drop</label>
            </value>
            <value>
                <fullName>Festival/Film</fullName>
                <isActive>false</isActive>
                <label>Festival/Film</label>
            </value>
            <value>
                <fullName>Fundraiser</fullName>
                <isActive>false</isActive>
                <label>Fundraiser</label>
            </value>
            <value>
                <fullName>Happy Hour</fullName>
                <isActive>false</isActive>
                <label>Happy Hour</label>
            </value>
            <value>
                <fullName>Imperfect Advocate</fullName>
                <isActive>false</isActive>
                <label>Imperfect Advocate</label>
            </value>
            <value>
                <fullName>Movie Night</fullName>
                <isActive>false</isActive>
                <label>Movie Night</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>POW &amp; Chow Party (Dinner or Brunch)</fullName>
                <isActive>false</isActive>
                <label>POW &amp; Chow Party (Dinner or Brunch)</label>
            </value>
            <value>
                <fullName>Purple Mountains</fullName>
                <isActive>false</isActive>
                <label>Purple Mountains</label>
            </value>
            <value>
                <fullName>Speaker/Panel</fullName>
                <isActive>false</isActive>
                <label>Speaker/Panel</label>
            </value>
            <value>
                <fullName>Table/Booth Set-Up</fullName>
                <isActive>false</isActive>
                <label>Table/Booth Set-Up</label>
            </value>
            <value>
                <fullName>Trivia Night</fullName>
                <isActive>false</isActive>
                <label>Trivia Night</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>