force-app/main/default/objects/Campaign/fields/Venue_City__c.field-meta.xml
<CustomField>
    <fullName>Venue_City__c</fullName>
    <label>Venue City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>