force-app/main/default/objects/Campaign/fields/Venue_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Venue_Postal_Code__c</fullName>
    <label>Venue Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>