force-app/main/default/objects/Campaign/fields/Venue_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Venue_State_Province__c</fullName>
    <label>Venue State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>