force-app/main/default/objects/Campaign/fields/Venue_Street__c.field-meta.xml
<CustomField>
    <fullName>Venue_Street__c</fullName>
    <label>Venue Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>