force-app/main/default/objects/Campaign/fields/What_can_we_do_better__c.field-meta.xml
<CustomField>
    <fullName>What_can_we_do_better__c</fullName>
    <label>What can we do better?</label>
    <type>TextArea</type>
</CustomField>