force-app/main/default/objects/Campaign/fields/What_went_well__c.field-meta.xml
<CustomField>
    <fullName>What_went_well__c</fullName>
    <label>What went well?</label>
    <type>TextArea</type>
</CustomField>