force-app/main/default/objects/Campaign/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <label>Event</label>
</RecordType>