force-app/main/default/objects/Campaign/recordTypes/Parent.recordType-meta.xml
<RecordType>
    <fullName>Parent</fullName>
    <active>true</active>
    <label>Parent</label>
</RecordType>