force-app/main/default/objects/Campaign/recordTypes/stayclassy__Classy.recordType-meta.xml
<RecordType>
    <fullName>stayclassy__Classy</fullName>
    <active>true</active>
    <description>Default Record Type for Campaigns created via GoFundMe Pro</description>
    <label>GoFundMe Pro</label>
</RecordType>