force-app/main/default/objects/Campaign/validationRules/stayclassy__Goal_Must_Exceed_Commitment.validationRule-meta.xml
<ValidationRule>
    <fullName>stayclassy__Goal_Must_Exceed_Commitment</fullName>
    <active>true</active>
    <description>The goal for a fundraising page or team must be greater than or equal to the commitment</description>
    <errorConditionFormula>stayclassy__Commitment__c &gt; 0 &amp;&amp; ExpectedRevenue &lt; stayclassy__Commitment__c</errorConditionFormula>
    <errorMessage>Expected Revenue (Fundraising Goal) can not be less than Commitment</errorMessage>
</ValidationRule>