force-app/main/default/objects/Campaign/listViews/Copy_of_2020_Absentee_Ballot_Campaigns.listView-meta.xml
<ListView>
    <fullName>Copy_of_2020_Absentee_Ballot_Campaigns</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ID</field>
        <operation>equals</operation>
        <value>7014P000001JceC</value>
    </filters>
    <filters>
        <field>PARENT_ID</field>
        <operation>equals</operation>
        <value>7014P000001JceC</value>
    </filters>
    <label>2020 Voter Guidebook Campaigns</label>
</ListView>